# nest2D

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  requirements_dev.txt  setup.py
docs/: develop.md
examples/: add.py  box.py  item.py  nest.py  point.py  simple_sample.py  svgwriter.py
src/: main.cpp
tests/: __init__.py  test_box.py  test_item.py  test_point.py  test_simple_sample.py  test_svgwriter.py
